Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13961

cmd: "dir ." or "dir .." doesn't correctly list directory contents

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.10
    • Shell
    • None

    Description

      The two commands: "dir ." or "dir .." do not correctly list the (current or parent) directory contents: instead of listing everything (files and directories), it only lists directories, also without the "." and ".." special directories.

      Attachments

        1. ros-dirdotdot.png
          35 kB
          Katayama Hirofumi MZ
        2. win2k3-dirdotdot.png
          19 kB
          Katayama Hirofumi MZ
        3. ros-dirdotdot-after.png
          41 kB
          Katayama Hirofumi MZ
        4. win10-DotsTest-3.png
          9 kB
          Katayama Hirofumi MZ
        5. ros-DotsTest-before-1.png
          30 kB
          Katayama Hirofumi MZ
        6. ros-DotsTest-before-2.png
          28 kB
          Katayama Hirofumi MZ
        7. ros-DotsTest-before-3.png
          28 kB
          Katayama Hirofumi MZ
        8. win10-DotsTest-1.png
          9 kB
          Katayama Hirofumi MZ
        9. win10-DotsTest-2.png
          9 kB
          Katayama Hirofumi MZ
        10. win2k3-DotsTest-1.png
          16 kB
          Katayama Hirofumi MZ
        11. win2k3-DotsTest-2.png
          12 kB
          Katayama Hirofumi MZ
        12. win2k3-DotsTest-3.png
          16 kB
          Katayama Hirofumi MZ
        13. ros-DotsTest-after-1.png
          31 kB
          Katayama Hirofumi MZ
        14. ros-DotsTest-after-2.png
          29 kB
          Katayama Hirofumi MZ
        15. ros-DotsTest-after-3.png
          30 kB
          Katayama Hirofumi MZ
        16. ros-DotsTest-after-2.png
          20 kB
          Katayama Hirofumi MZ
        17. ros-DotsTest-after-3.png
          20 kB
          Katayama Hirofumi MZ
        18. ros-DotsTest-after-1.png
          22 kB
          Katayama Hirofumi MZ

        Issue Links

          Activity

            People

              hbelusca hbelusca
              hbelusca hbelusca
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: